sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:10: error: ';' expected but 'while' found.
    }while (chgt)
     ^AlgBubbleSort1:12: error: 'while' expected but '}' found.
} 
^